# WaterRobo

./: .gitignore  model_data.ipynb  test_fore.txt  test_j_world.txt  test_port.txt  test_pos.txt  test_stat.txt
addedmass_plugin/: CMakeLists.txt  added_mass.cc
hydrodrag_plugin/: CMakeLists.txt  hydro_drag.cc
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/spawner_pkg/lib/spawner_pkg/: spawn
install/spawner_pkg/share/spawner_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test_force/lib/test_force/: force
install/test_force/share/test_force/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
my_plot/: Plot Name-AUV_mk4:world_pose_position_x.csv  Plot Name-AUV_mk4:world_pose_position_y.csv  Plot Name-AUV_mk4:world_pose_position_z.csv
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: controller.cpp
src/get_data/: package.xml  setup.py
src/get_data/get_data/: data_collector.py
src/log/: latest_build
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: path_planner.cpp
src/spawner_pkg/: setup.cfg  setup.py
src/spawner_pkg/launch/: controller.launch.py  sim.launch.py
src/spawner_pkg/models/AUV_mk4/: backup.sdf
src/spawner_pkg/worlds/: world_mk1.world
src/state_estimator/: CMakeLists.txt  package.xml
src/state_estimator/src/: estimator.cpp
src/test_force/: CMakeLists.txt
src/test_force/src/: publisher_force.cpp
(+10 files in other folders)
